--- a/src/Codex.Views/Codex.Views.csproj
+++ b/src/Codex.Views/Codex.Views.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Codex.Model\Codex.Model.fsproj" />
+  </ItemGroup>
+
 </Project>
