--- a/src/Codex.Model/Codex.Model.fsproj
+++ b/src/Codex.Model/Codex.Model.fsproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="CurrentScene.fs" />
+    <Compile Include="Models.fs" />
     <Compile Include="Messages.fs" />
     <Compile Include="Update.fs" />
   </ItemGroup>
