--- a/src/Codex.Model/Codex.Model.fsproj
+++ b/src/Codex.Model/Codex.Model.fsproj
@@ -1,17 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Models.fs" />
-    <Compile Include="Messages.fs" />
-    <Compile Include="Update.fs" />
+    <Compile Include="CoreModel.fs" />
+    <Compile Include="SceneEditor.fs" />
+    <Compile Include="MainWindow.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Elmish" Version="3.0.6" />
+    <PackageReference Include="Elmish.WPF" Version="3.5.0" />
   </ItemGroup>
 
 </Project>
