--- a/src/Codex.Model/Codex.Model.fsproj
+++ b/src/Codex.Model/Codex.Model.fsproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <Compile Include="CoreModel.fs" />
     <Compile Include="SceneEditor.fs" />
+    <Compile Include="TableOfContents.fs" />
     <Compile Include="MainWindow.fs" />
   </ItemGroup>
 
