file save / load initial work via elmish moved mainwindow into entry point project

--- a/src/Codex.Model/Codex.Model.fsproj
+++ b/src/Codex.Model/Codex.Model.fsproj
@@ -8,7 +8,7 @@
   <ItemGroup>
     <Compile Include="SceneEditor.fs" />
     <Compile Include="TableOfContents.fs" />
-    <Compile Include="MainWindow.fs" />
+    <Compile Include="TestNovel.fs" />
   </ItemGroup>
 
   <ItemGroup>
